--- a/styles/main.css
+++ b/styles/main.css
@@ -12,21 +12,21 @@
         Global Styles
  ---------------------------------------------*/
 
- .afmbe.sheet.actor .window-content,
- .afmbe.sheet.item .window-content {
+ .afmbe-jesuisfrog.sheet.actor .window-content,
+ .afmbe-jesuisfrog.sheet.item .window-content {
     background: rgb(22, 22, 22);
     color: rgb(220, 220, 220);
 }
 
-.afmbe.sheet.actor .entity-link,
-.afmbe.sheet.actor .content-link,
-.afmbe.sheet.item .entity-link,
-.afmbe.sheet.item .content-link {
+.afmbe-jesuisfrog.sheet.actor .entity-link,
+.afmbe-jesuisfrog.sheet.actor .content-link,
+.afmbe-jesuisfrog.sheet.item .entity-link,
+.afmbe-jesuisfrog.sheet.item .content-link {
    color: black;
 }
 
-.afmbe.sheet.actor button,
-.afmbe.sheet.item button {
+.afmbe-jesuisfrog.sheet.actor button,
+.afmbe-jesuisfrog.sheet.item button {
     color: rgb(231, 231, 231);
     background:rgb(85, 85, 85);
     border: 1px solid black;
@@ -34,18 +34,18 @@
     line-height: 10px;
 }
 
-.afmbe.sheet.actor input,
-.afmbe.sheet.actor select,
-.afmbe.sheet.item input,
-.afmbe.sheet.item select {
+.afmbe-jesuisfrog.sheet.actor input,
+.afmbe-jesuisfrog.sheet.actor select,
+.afmbe-jesuisfrog.sheet.item input,
+.afmbe-jesuisfrog.sheet.item select {
     color: rgb(231, 231, 231);
 }
 
-.afmbe.sheet.item .window-content .editable {
+.afmbe-jesuisfrog.sheet.item .window-content .editable {
     background: rgb(45, 51, 56);
 }
 
-.afmbe option {
+.afmbe-jesuisfrog option {
     background: rgb(22, 22, 22);
 }
 
@@ -69,7 +69,7 @@
     background: rgb(22, 22, 22);
 }
 
- .afmbe-dialog-menu {
+ .afmbe-jesuisfrog-dialog-menu {
      display: flex;
      flex-direction: column;
      gap: 5px;
@@ -77,21 +77,21 @@
      color: rgb(231, 231, 231);
  }
 
- .afmbe h1,
- .afmbe h2,
- .afmbe-dialog-menu h1,
- .afmbe-dialog-menu h2 {
+ .afmbe-jesuisfrog h1,
+ .afmbe-jesuisfrog h2,
+ .afmbe-jesuisfrog-dialog-menu h1,
+ .afmbe-jesuisfrog-dialog-menu h2 {
      font-family: "Jolly Roger";
      width: 100%;
  }
 
- .afmbe-dialog-menu .menu-flex-container-row {
+ .afmbe-jesuisfrog-dialog-menu .menu-flex-container-row {
      display: flex;
      flex-direction: row;
      align-items: flex-start;
  }
 
- .afmbe-dialog-menu .menu-flex-container {
+ .afmbe-jesuisfrog-dialog-menu .menu-flex-container {
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -102,7 +102,7 @@
      gap: 5px;
  }
 
- .afmbe-dialog-menu .vertical-column {
+ .afmbe-jesuisfrog-dialog-menu .vertical-column {
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -112,37 +112,37 @@
      text-align: center;
  }
 
- .afmbe-dialog-menu-text-box {
+ .afmbe-jesuisfrog-dialog-menu-text-box {
      display: flex;
      flex-direction: column;
      background: rgba(124, 118, 118, 0.493);
      padding: 5px;
  }
 
- .afmbe-dialog-menu .attribute-input {
+ .afmbe-jesuisfrog-dialog-menu .attribute-input {
      width: 100%;
  }
 
- .afmbe-dialog-menu .table-center-align {
+ .afmbe-jesuisfrog-dialog-menu .table-center-align {
      text-align: center;
  }
 
- .afmbe-dialog-menu .table-bold-text {
+ .afmbe-jesuisfrog-dialog-menu .table-bold-text {
      font-weight: bold;
  }
 
- .afmbe-dialog-menu input,
- .afmbe-dialog-menu select {
+ .afmbe-jesuisfrog-dialog-menu input,
+ .afmbe-jesuisfrog-dialog-menu select {
      color: white;
      width: 100%;
  }
 
- .afmbe-dialog-menu option {
+ .afmbe-jesuisfrog-dialog-menu option {
     background: rgb(41, 50, 59);
  }
 
- .afmbe-tags-flex-container,
- .afmbe-tags-flex-container-item {
+ .afmbe-jesuisfrog-tags-flex-container,
+ .afmbe-jesuisfrog-tags-flex-container-item {
      color: black;
      display: flex;
      flex-direction: row;
@@ -153,7 +153,7 @@
      padding: 0 0 5px 0;
  }
 
- .afmbe-tags-flex-container div {
+ .afmbe-jesuisfrog-tags-flex-container div {
      background-color: rgba(131, 15, 15, 0.705);
      color: white;
      border-radius: 5px;
@@ -161,7 +161,7 @@
      max-width: 100%;
  }
 
- .afmbe-tags-flex-container-item div {
+ .afmbe-jesuisfrog-tags-flex-container-item div {
     background-color: rgba(0, 0, 0, 0.705);
     color: white;
     border-radius: 5px;
@@ -169,17 +169,17 @@
     max-width: 100%;
  }
 
- .afmbe h2 {
+ .afmbe-jesuisfrog h2 {
      margin: 0;
      font-size: 22px;
  }
 
- .afmbe .table-left-align {
+ .afmbe-jesuisfrog .table-left-align {
      text-align: left;
      padding: 0 0 0 10px;
  }
 
- .afmbe .header-with-button {
+ .afmbe-jesuisfrog .header-with-button {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -187,22 +187,22 @@
      gap: 5px;
  }
 
- .afmbe .header-with-button button {
+ .afmbe-jesuisfrog .header-with-button button {
      width: 30px;
  }
 
- .afmbe button:hover,
- .afmbe .item-name:hover,
- .afmbe .profile-img:hover {
+ .afmbe-jesuisfrog button:hover,
+ .afmbe-jesuisfrog .item-name:hover,
+ .afmbe-jesuisfrog .profile-img:hover {
      cursor: pointer;
  }
 
- .afmbe .item-name:hover {
+ .afmbe-jesuisfrog .item-name:hover {
      font-weight: bold;
      color: rgb(255, 255, 255);
  }
 
- .afmbe .item-name-flex-container {
+ .afmbe-jesuisfrog .item-name-flex-container {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -210,37 +210,37 @@
      gap: 5px;
  }
 
- .afmbe .fa-dice-d20:hover {
+ .afmbe-jesuisfrog .fa-dice-d20:hover {
      cursor: pointer;
      color: darkred;
  }
 
- .afmbe .table-center-align {
+ .afmbe-jesuisfrog .table-center-align {
      text-align: center;
  }
 
-.afmbe .table-flex-cell {
+.afmbe-jesuisfrog .table-flex-cell {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.afmbe .table-flex-cell input {
+.afmbe-jesuisfrog .table-flex-cell input {
     width: 30px;
 }
 
-.afmbe .table-equipped {
+.afmbe-jesuisfrog .table-equipped {
     text-align: center;
     width: 50px;
 }
 
-.afmbe .item input {
+.afmbe-jesuisfrog .item input {
     height: 15px;
     width: 15px;
 }
 
-.afmbe tbody tr:nth-child(even) {
+.afmbe-jesuisfrog tbody tr:nth-child(even) {
     background: rgba(46, 46, 46, 0.541);
 }
 
@@ -254,7 +254,7 @@
      font-family: "Jolly Roger"
  }
 
- .afmbe-chat-roll-table {
+ .afmbe-jesuisfrog-chat-roll-table {
      text-align: center;
      font-weight: bold;
  }
@@ -273,26 +273,26 @@
     font-family: "Jolly Roger";
  }
 
- .afmbe .bio-container .editor {
+ .afmbe-jesuisfrog .bio-container .editor {
      height: 200px;
      width: 100%;
  }
 
- .afmbe .description-container .editor {
+ .afmbe-jesuisfrog .description-container .editor {
     width: 100%;
  }
 
- .afmbe .editor-content {
+ .afmbe-jesuisfrog .editor-content {
      min-height: 200px;
      max-height: 100%;
  }
 
- .afmbe .editor .tox-toolbar__group button {
+ .afmbe-jesuisfrog .editor .tox-toolbar__group button {
     background: rgba(190, 190, 190, 0.692);
     color: black;
  }
 
- .afmbe .editor .tox-edit-area {
+ .afmbe-jesuisfrog .editor .tox-edit-area {
      background: rgba(255, 255, 255, 0.808);
  }
 
@@ -300,7 +300,7 @@
         Character Sidebar
  ---------------------------------------------*/
 
- .afmbe .sheet-flex-container {
+ .afmbe-jesuisfrog .sheet-flex-container {
      display: flex;
      flex-direction: row;
      align-items: top;
@@ -310,7 +310,7 @@
      background: rgb(62, 64, 66);
  }
 
- .afmbe .sheet-sidebar {
+ .afmbe-jesuisfrog .sheet-sidebar {
      display: flex;
      flex-direction: column;
      min-width: 250px;
@@ -320,11 +320,11 @@
      background: rgb(90, 93, 95);
  }
 
- .afmbe .sheet-sidebar input {
+ .afmbe-jesuisfrog .sheet-sidebar input {
      text-align: center;
  }
 
- .afmbe .sheet-body {
+ .afmbe-jesuisfrog .sheet-body {
      display: flex;
      flex-direction: column;
      width: 100%;
@@ -333,27 +333,27 @@
      gap: 10px;
  }
  
- .afmbe .header-container {
+ .afmbe-jesuisfrog .header-container {
      position: relative;
      top: 0;
  }
 
- .afmbe .info-container {
+ .afmbe-jesuisfrog .info-container {
     display: flex;
     flex-direction: column;
  }
 
- .afmbe .polaroid-container {
+ .afmbe-jesuisfrog .polaroid-container {
      position: relative;
  }
 
- .afmbe .polaroid {
+ .afmbe-jesuisfrog .polaroid {
      height: 250px;
      border: none;
      z-index: -1;
  }
 
- .afmbe .profile-img {
+ .afmbe-jesuisfrog .profile-img {
      position: absolute;
      top: 30px;
      left: 32px;
@@ -364,7 +364,7 @@
      z-index: 1;
  }
  
- .afmbe #sheet-logo {
+ .afmbe-jesuisfrog #sheet-logo {
      position: absolute;
      top: 0;
      left: 0;
@@ -373,7 +373,7 @@
      z-index: +2;
  }
 
- .afmbe .sheet-nav-container {
+ .afmbe-jesuisfrog .sheet-nav-container {
      position: absolute;
      bottom: 0;
      right: 0;
@@ -384,36 +384,36 @@
      border-radius: 3px;
  }
 
- .afmbe .sheet-nav {
+ .afmbe-jesuisfrog .sheet-nav {
      display: flex;
      flex-direction: column;
      align-items: center;
      border: none !important;
  }
 
- .afmbe .sheet-nav a {
+ .afmbe-jesuisfrog .sheet-nav a {
      padding: 0 10px;
  }
 
- .afmbe .sheet-nav .active {
+ .afmbe-jesuisfrog .sheet-nav .active {
      text-decoration: underline;
  }
 
- .afmbe .profile-tags-container {
+ .afmbe-jesuisfrog .profile-tags-container {
      position: absolute;
      bottom: 0;
      left: 0;
      z-index: 3;
  }
 
- .afmbe .profile-tags-container .tags-flex-container {
+ .afmbe-jesuisfrog .profile-tags-container .tags-flex-container {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
  }
 
- .afmbe .tags-flex-container .tag {
+ .afmbe-jesuisfrog .tags-flex-container .tag {
      border-radius: 5px;
      background:rgba(124, 118, 118, 0.493);
      color: darkred;
@@ -421,7 +421,7 @@
      font-size: smaller;
  }
 
- .afmbe .xp-container {
+ .afmbe-jesuisfrog .xp-container {
      position: absolute;
      top: 0;
      right: 0;
@@ -429,28 +429,28 @@
      text-align: center;
  }
 
- .afmbe .xp-flex-container {
+ .afmbe-jesuisfrog .xp-flex-container {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
  }
 
- .afmbe .charname {
+ .afmbe-jesuisfrog .charname {
      width: 100%;
  }
 
- .afmbe .attribute-container {
+ .afmbe-jesuisfrog .attribute-container {
     margin: 0 0 10px 0;
  }
 
- .afmbe .resource-container {
+ .afmbe-jesuisfrog .resource-container {
      display: flex;
      flex-direction: column;
      padding: 0 5px;
  }
 
- .afmbe .resource {
+ .afmbe-jesuisfrog .resource {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -460,7 +460,7 @@
      padding: 5px 0;
  }
 
- .afmbe .resource-values {
+ .afmbe-jesuisfrog .resource-values {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -470,19 +470,19 @@
      width: 50%;
  }
 
- .afmbe .resource .attribute input {
+ .afmbe-jesuisfrog .resource .attribute input {
      width: 75%;
      height: 20px;
      color: white;
  }
 
- .afmbe .resource .secondaryAttribute input {
+ .afmbe-jesuisfrog .resource .secondaryAttribute input {
     width: 50px;
     height: 20px;
     color: white;
  }
 
- .afmbe .resource button {
+ .afmbe-jesuisfrog .resource button {
      width: 50%;
      height: 25px;
      line-height: 10px;
@@ -490,13 +490,13 @@
      border: 1px solid black;
  }
 
- .afmbe #characterTypeSelect {
+ .afmbe-jesuisfrog #characterTypeSelect {
      font-family: "Jolly Roger";
      font-size: x-large;
      text-align: center !important;
  }
 
- .afmbe #attributes-header {
+ .afmbe-jesuisfrog #attributes-header {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -508,28 +508,28 @@
         Character Body Content
  ---------------------------------------------*/
 
- .afmbe .bio-container {
+ .afmbe-jesuisfrog .bio-container {
      display: flex;
      flex-direction: column;
      border-bottom: 1px solid;
  }
 
- .afmbe .skill-item-container {
+ .afmbe-jesuisfrog .skill-item-container {
      display: flex;
      flex-direction: row;
      align-items: top;
      gap: 10px;
  }
 
- .afmbe .qualities-container,
- .afmbe .drawbacks-container,
- .afmbe .skills-container,
- .afmbe .powers-container {
+ .afmbe-jesuisfrog .qualities-container,
+ .afmbe-jesuisfrog .drawbacks-container,
+ .afmbe-jesuisfrog .skills-container,
+ .afmbe-jesuisfrog .powers-container {
      width: 50%;
      border-radius: 3px;
  }
 
- .afmbe .equipment-header {
+ .afmbe-jesuisfrog .equipment-header {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -539,7 +539,7 @@
      background: rgba(124, 118, 118, 0.493);
  }
 
- .afmbe .encumbrance-resource {
+ .afmbe-jesuisfrog .encumbrance-resource {
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -547,21 +547,21 @@
      font-family: "Jolly Roger";
  }
 
- .afmbe .encumbrance-resource div {
+ .afmbe-jesuisfrog .encumbrance-resource div {
      font-size: 20px;
  }
 
- .afmbe .weapon-table,
- .afmbe .item-table,
- .afmbe .qualities-container,
- .afmbe .drawbacks-container,
- .afmbe .skills-container,
- .afmbe .powers-container {
+ .afmbe-jesuisfrog .weapon-table,
+ .afmbe-jesuisfrog .item-table,
+ .afmbe-jesuisfrog .qualities-container,
+ .afmbe-jesuisfrog .drawbacks-container,
+ .afmbe-jesuisfrog .skills-container,
+ .afmbe-jesuisfrog .powers-container {
      margin: 10px 0 0 0;
      background: rgba(78, 78, 78, 0.603);
  }
 
- .afmbe .armor-button-cell button {
+ .afmbe-jesuisfrog .armor-button-cell button {
      max-width: 75%;
      height: 18px;
      line-height: 10px;
@@ -571,18 +571,18 @@
         Item Sheets
  ---------------------------------------------*/
 
- .afmbe .item-sheet-container {
+ .afmbe-jesuisfrog .item-sheet-container {
     padding: 0 5px;
     background: rgb(41, 50, 59);
     height: 100%;
  }
 
- .afmbe .item-sheet-header {
+ .afmbe-jesuisfrog .item-sheet-header {
      display: flex;
      flex-direction: row;
  }
 
- .afmbe .item-header-container {
+ .afmbe-jesuisfrog .item-header-container {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -591,13 +591,13 @@
      gap: 10px;
  }
 
- .afmbe .item-img {
+ .afmbe-jesuisfrog .item-img {
      width: 50px;
      height: 50px;
      border: none;
  }
 
- .afmbe .item-resource-container {
+ .afmbe-jesuisfrog .item-resource-container {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -607,40 +607,40 @@
      text-align: center;
  }
 
- .afmbe .description-container table th {
+ .afmbe-jesuisfrog .description-container table th {
      width: 50%;
      text-align: left;
  }
 
- .afmbe .description-container table input {
+ .afmbe-jesuisfrog .description-container table input {
      text-align: center;
  }
 
- .afmbe .description-container {
+ .afmbe-jesuisfrog .description-container {
      display: flex;
      flex-direction: row;
      height: 100%;
  }
 
- .afmbe .item-description-sidebar {
+ .afmbe-jesuisfrog .item-description-sidebar {
      width: 100%;
      padding: 0 5px;
      border-left: 1px solid rgb(231, 231, 231);
  }
 
- .afmbe .item-attribute-sidebar {
+ .afmbe-jesuisfrog .item-attribute-sidebar {
      min-width: 40%;
      height: 100%;
      padding: 0 5px;
  }
 
- .afmbe .item-attribute-sidebar table select,
- .afmbe .item-attribute-sidebar table input {
+ .afmbe-jesuisfrog .item-attribute-sidebar table select,
+ .afmbe-jesuisfrog .item-attribute-sidebar table input {
      width: 100%;
      height: 20px;
  }
 
- .afmbe .item-attribute-flex-container {
+ .afmbe-jesuisfrog .item-attribute-flex-container {
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -651,7 +651,7 @@
         Limited Permission Sheets
  ---------------------------------------------*/
 
- .afmbe .blur {
+ .afmbe-jesuisfrog .blur {
      filter: blur(5px);
  }
 
@@ -659,38 +659,38 @@
         Light Mode Settings
  ---------------------------------------------*/
 
- .afmbe.sheet.actor.light-mode .window-content,
- .afmbe.sheet.item.light-mode .window-content {
+ .afmbe-jesuisfrog.sheet.actor.light-mode .window-content,
+ .afmbe-jesuisfrog.sheet.item.light-mode .window-content {
     background: url('../images/parchment.jpg');
     color: black;
 }
 
-.afmbe.sheet.actor.light-mode .entity-link,
-.afmbe.sheet.actor.light-mode .content-link,
-.afmbe.sheet.item.light-mode .entity-link,
-.afmbe.sheet.item.light-mode .content-link {
+.afmbe-jesuisfrog.sheet.actor.light-mode .entity-link,
+.afmbe-jesuisfrog.sheet.actor.light-mode .content-link,
+.afmbe-jesuisfrog.sheet.item.light-mode .entity-link,
+.afmbe-jesuisfrog.sheet.item.light-mode .content-link {
    color: black;
 }
 
-.afmbe.sheet.actor.light-mode button,
-.afmbe.sheet.item.light-mode button {
+.afmbe-jesuisfrog.sheet.actor.light-mode button,
+.afmbe-jesuisfrog.sheet.item.light-mode button {
     color: black;
     background: none;
     border: 1px solid black;
 }
 
-.afmbe.sheet.actor.light-mode input,
-.afmbe.sheet.actor.light-mode select,
-.afmbe.sheet.item.light-mode input,
-.afmbe.sheet.item.light-mode select {
+.afmbe-jesuisfrog.sheet.actor.light-mode input,
+.afmbe-jesuisfrog.sheet.actor.light-mode select,
+.afmbe-jesuisfrog.sheet.item.light-mode input,
+.afmbe-jesuisfrog.sheet.item.light-mode select {
     color: rgb(0, 0, 0);
 }
 
-.afmbe.sheet.item.light-mode .window-content .editable {
+.afmbe-jesuisfrog.sheet.item.light-mode .window-content .editable {
     background: none;
 }
 
-.afmbe.light-mode option {
+.afmbe-jesuisfrog.light-mode option {
     background: rgb(228, 228, 228);
 }
 
@@ -709,32 +709,32 @@
     border: 1px solid black;
 }
 
-.afmbe.light-mode .sheet-flex-container {
+.afmbe-jesuisfrog.light-mode .sheet-flex-container {
     background: none;
 }
 
-.afmbe.light-mode .sheet-sidebar {
+.afmbe-jesuisfrog.light-mode .sheet-sidebar {
     background: none;
 }
 
-.afmbe.light-mode .weapon-table,
-.afmbe.light-mode .item-table,
-.afmbe.light-mode .qualities-container,
-.afmbe.light-mode .drawbacks-container,
-.afmbe.light-mode .skills-container,
-.afmbe.light-mode .powers-container {
+.afmbe-jesuisfrog.light-mode .weapon-table,
+.afmbe-jesuisfrog.light-mode .item-table,
+.afmbe-jesuisfrog.light-mode .qualities-container,
+.afmbe-jesuisfrog.light-mode .drawbacks-container,
+.afmbe-jesuisfrog.light-mode .skills-container,
+.afmbe-jesuisfrog.light-mode .powers-container {
     background: rgba(196, 196, 196, 0.603);
 }
 
-.afmbe.light-mode tbody tr:nth-child(even) {
+.afmbe-jesuisfrog.light-mode tbody tr:nth-child(even) {
     background: rgba(218, 218, 218, 0.541);
 }
 
-.afmbe.light-mode .sheet-nav-container {
+.afmbe-jesuisfrog.light-mode .sheet-nav-container {
     background: rgba(114, 114, 114, 0.616);
 }
 
-.afmbe.light-mode .item-description-sidebar {
+.afmbe-jesuisfrog.light-mode .item-description-sidebar {
     border-left: 1px solid rgb(0, 0, 0);
 }
 
@@ -753,21 +753,21 @@
     border: 1px solid black;
 }
 
-.afmbe.window-app.dialog.light-mode .afmbe-dialog-menu {
+.afmbe-jesuisfrog.window-app.dialog.light-mode .afmbe-jesuisfrog-dialog-menu {
      background: none;
      color: black;
  }
 
- .afmbe.window-app.dialog.light-mode .afmbe-dialog-menu-text-box {
+ .afmbe-jesuisfrog.window-app.dialog.light-mode .afmbe-jesuisfrog-dialog-menu-text-box {
     background: none;
 }
 
-.afmbe.window-app.dialog.light-mode input,
-.afmbe.window-app.dialog.light-mode select {
+.afmbe-jesuisfrog.window-app.dialog.light-mode input,
+.afmbe-jesuisfrog.window-app.dialog.light-mode select {
     color: black;
 }
 
-.afmbe.light-mode .item-name:hover {
+.afmbe-jesuisfrog.light-mode .item-name:hover {
     font-weight: bold;
     color: rgb(0, 0, 0);
 }
