--- a/templates/vehicle-sheet.html
+++ b/templates/vehicle-sheet.html
@@ -4,12 +4,12 @@
     <div class="sheet-flex-container">
         <div class="sheet-sidebar">
             <div class="header-container">
-                <!-- <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif"> -->
+                <!-- <img id="sheet-logo" src="systems/afmbe-jesuisfrog/images/AFMBElogo.gif"> -->
                 <div class="polaroid-container">
-                    <img class="polaroid" src="systems/afmbe/images/polaroid.png">
+                    <img class="polaroid" src="systems/afmbe-jesuisfrog/images/polaroid.png">
                     <img class="profile-img" data-edit="img" src="{{actor.img}}">
                     <div class="sheet-nav-container" hidden>
-                        <nav class="sheet-nav sheet-tabs tabs" data-group="primary" >
+                        <nav class="sheet-nav sheet-tabs tabs" data-group="primary">
                             <a class="item" data-tab="core">Core</a>
                         </nav>
                     </div>
@@ -42,7 +42,8 @@
                                 <div class="resource">
                                     <button type="button">Acceleration</button>
                                     <div class="resource-values attribute">
-                                        <input type="number" name="system.acceleration" value="{{actor.system.acceleration}}">
+                                        <input type="number" name="system.acceleration"
+                                            value="{{actor.system.acceleration}}">
                                     </div>
                                 </div>
                                 <div class="resource">
@@ -66,13 +67,15 @@
                                 <div class="resource">
                                     <button type="button">Damage Cpty</button>
                                     <div class="resource-values attribute">
-                                        <input type="number" name="system.damage_capacity" value="{{actor.system.damage_capacity}}">
+                                        <input type="number" name="system.damage_capacity"
+                                            value="{{actor.system.damage_capacity}}">
                                     </div>
                                 </div>
                                 <div class="resource">
                                     <button type="button">Armor Value</button>
                                     <div class="resource-values attribute">
-                                        <input type="number" name="system.armor_value" value="{{actor.system.armor_value}}">
+                                        <input type="number" name="system.armor_value"
+                                            value="{{actor.system.armor_value}}">
                                     </div>
                                 </div>
                                 <div class="resource">
@@ -90,7 +93,8 @@
                                 <div class="resource">
                                     <button type="button">Availability</button>
                                     <div class="resource-values attribute">
-                                        <input type="text" name="system.availability" value="{{actor.system.availability}}">
+                                        <input type="text" name="system.availability"
+                                            value="{{actor.system.availability}}">
                                     </div>
                                 </div>
                             </div>
@@ -105,12 +109,13 @@
             <div class="tab core" data-group="primary" data-tab="core">
                 <div class="bio-container">
                     <h2>Description</h2>
-                    {{editor actor.system.biography target="system.biography" button=true owner=owner editable=editable}}
+                    {{editor actor.system.biography target="system.biography" button=true owner=owner
+                    editable=editable}}
                 </div>
 
                 <div class="weapon-table">
                     <h2 class="header-with-button">
-                        <button type="button" class="create-item" data-create="weapon">+</button> 
+                        <button type="button" class="create-item" data-create="weapon">+</button>
                         <span>Weapons</span>
                     </h2>
                     <table>
@@ -121,30 +126,32 @@
                                 <th>Damage</th>
                                 <th>Capacity</th>
                                 <th>EV</th>
-                                <th><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></th>
+                                <th><a class="item-control item-delete" title="Delete Item"><i
+                                            class="fas fa-trash"></i></a></th>
                             </tr>
                         </thead>
                         <tbody>
                             {{#each actor.weapon as |item id|}}
-                                <tr class="item" data-item-id="{{item._id}}">
-                                    <td>
-                                        <div class="item-name-flex-container">
-                                            <i class="fas fa-dice-d20 damage-roll"></i>
-                                            <div class="item-name">{{item.name}}</div>
-                                        </div>
-                                    </td>
-                                    <td class="table-center-align">{{item.system.range}}</td>
-                                    <td class="table-center-align">{{item.system.damage}}</td>
-                                    <td>
-                                        <div class="table-flex-cell">
-                                            <div>{{item.system.capacity.value}}</div>
-                                            /
-                                            <div>{{item.system.capacity.max}}</div>
-                                        </div>
-                                    </td>
-                                    <td class="table-center-align">{{item.system.encumbrance}}</td>
-                                    <td class="table-center-align"><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></td>
-                                </tr>
+                            <tr class="item" data-item-id="{{item._id}}">
+                                <td>
+                                    <div class="item-name-flex-container">
+                                        <i class="fas fa-dice-d20 damage-roll"></i>
+                                        <div class="item-name">{{item.name}}</div>
+                                    </div>
+                                </td>
+                                <td class="table-center-align">{{item.system.range}}</td>
+                                <td class="table-center-align">{{item.system.damage}}</td>
+                                <td>
+                                    <div class="table-flex-cell">
+                                        <div>{{item.system.capacity.value}}</div>
+                                        /
+                                        <div>{{item.system.capacity.max}}</div>
+                                    </div>
+                                </td>
+                                <td class="table-center-align">{{item.system.encumbrance}}</td>
+                                <td class="table-center-align"><a class="item-control item-delete"
+                                        title="Delete Item"><i class="fas fa-trash"></i></a></td>
+                            </tr>
                             {{/each}}
                         </tbody>
                     </table>
@@ -152,7 +159,7 @@
 
                 <div class="item-table">
                     <h2 class="header-with-button">
-                        <button type="button" class="create-item" data-create="item">+</button> 
+                        <button type="button" class="create-item" data-create="item">+</button>
                         <span>Equipped Items</span>
                     </h2>
                     <table>
@@ -162,25 +169,27 @@
                                 <th>Qty</th>
                                 <th>Armor Value</th>
                                 <th>EV</th>
-                                <th><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></th>
+                                <th><a class="item-control item-delete" title="Delete Item"><i
+                                            class="fas fa-trash"></i></a></th>
                             </tr>
                         </thead>
                         <tbody>
                             {{#each actor.equippedItem as |item id|}}
-                                <tr class="item" data-item-id="{{item._id}}">
-                                    <td>
-                                        <div class="item-name-flex-container">
-                                            <input type="checkbox" class="toggleEquipped" {{checked item.system.equipped}}>
-                                            <div class="item-name">{{item.name}}</div>
-                                        </div>
-                                    </td>
-                                    <td class="table-center-align">{{item.system.qty}}</td>
-                                    <td class="table-center-align armor-button-cell">
-                                        <button type="button">{{item.system.armor_value}}</button>
-                                    </td>
-                                    <td class="table-center-align">{{item.system.encumbrance}}</td>
-                                    <td class="table-center-align"><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></td>
-                                </tr>
+                            <tr class="item" data-item-id="{{item._id}}">
+                                <td>
+                                    <div class="item-name-flex-container">
+                                        <input type="checkbox" class="toggleEquipped" {{checked item.system.equipped}}>
+                                        <div class="item-name">{{item.name}}</div>
+                                    </div>
+                                </td>
+                                <td class="table-center-align">{{item.system.qty}}</td>
+                                <td class="table-center-align armor-button-cell">
+                                    <button type="button">{{item.system.armor_value}}</button>
+                                </td>
+                                <td class="table-center-align">{{item.system.encumbrance}}</td>
+                                <td class="table-center-align"><a class="item-control item-delete"
+                                        title="Delete Item"><i class="fas fa-trash"></i></a></td>
+                            </tr>
                             {{/each}}
                         </tbody>
                     </table>
@@ -188,7 +197,7 @@
 
                 <div class="item-table">
                     <h2 class="header-with-button">
-                        <button type="button" class="create-item" data-create="item">+</button> 
+                        <button type="button" class="create-item" data-create="item">+</button>
                         <span>Items</span>
                     </h2>
                     <table>
@@ -197,22 +206,24 @@
                                 <th class="table-left-align">Name</th>
                                 <th>Qty</th>
                                 <th>EV</th>
-                                <th><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></th>
+                                <th><a class="item-control item-delete" title="Delete Item"><i
+                                            class="fas fa-trash"></i></a></th>
                             </tr>
                         </thead>
                         <tbody>
                             {{#each actor.item as |item id|}}
-                                <tr class="item" data-item-id="{{item._id}}">
-                                    <td>
-                                        <div class="item-name-flex-container">
-                                            <input type="checkbox" class="toggleEquipped" {{checked item.system.equipped}}>
-                                            <div class="item-name">{{item.name}}</div>
-                                        </div>
-                                    </td>
-                                    <td class="table-center-align">{{item.system.qty}}</td>
-                                    <td class="table-center-align">{{item.system.encumbrance}}</td>
-                                    <td class="table-center-align"><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></td>
-                                </tr>
+                            <tr class="item" data-item-id="{{item._id}}">
+                                <td>
+                                    <div class="item-name-flex-container">
+                                        <input type="checkbox" class="toggleEquipped" {{checked item.system.equipped}}>
+                                        <div class="item-name">{{item.name}}</div>
+                                    </div>
+                                </td>
+                                <td class="table-center-align">{{item.system.qty}}</td>
+                                <td class="table-center-align">{{item.system.encumbrance}}</td>
+                                <td class="table-center-align"><a class="item-control item-delete"
+                                        title="Delete Item"><i class="fas fa-trash"></i></a></td>
+                            </tr>
                             {{/each}}
                         </tbody>
                     </table>
